beta version star wars api

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-Y: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'StarWars';
+  src: local('StarWars'), url(./fonts/Starjedi.ttf) format('truetype');
 }
